--- a/sass/_vars.sass
+++ b/sass/_vars.sass
@@ -3,4 +3,4 @@ $primary-color: #ffffff
 $secondary-color: #999999
 $tertiary-color: #629647
 $cuaternary-color: #58b9ee
-$primary-font: "Courier New", Courier, monospace
+$primary-font: "Courier New", Courier, helvetica
