--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@
   background: white;
   color: black;
   text-align: center;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Courier New", Courier, helvetica;
   font-weight: normal;
   position: absolute;
   z-index: 10;
@@ -271,7 +271,7 @@
 body {
   background-color: #262626;
   color: #ffffff;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Courier New", Courier, helvetica;
 }
 
 .landing, .projects, .languajes {
